# AMcoli

./: .gitignore  CMakeLists.txt  README.md  context.md  progress.md  setup_guide.md
include/: amcoli.h
npm-wrapper/: package.json
npm-wrapper/lib/: agent.js
npm-wrapper/scripts/: install.js
scripts/: install.ps1  install.sh
src/: amcoli-bench.cpp  amcoli-bench.h  amcoli-downloader.cpp  amcoli-downloader.h  amcoli-sys-info.cpp  amcoli-sys-info.h  amcoli.cpp  llama-disk-streamer.cpp  llama-disk-streamer.h  llama-moe-cache.cpp  llama-moe-cache.h  llama-moe-prefetch.cpp  llama-moe-prefetch.h  llama-moe-router.cpp  llama-moe-router.h
tests/: test-bench.cpp  test-disk-streamer.cpp  test-moe-cache.cpp  test-router-config.cpp
tools/convert/: generate_synthetic.cpp
tools/run/: main.cpp
